deploy/bluemix-container-service/nginx/nginx-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: nginx-ingress-lb
    spec:
      containers:
      - args:
        - /nginx-ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/nginx-default-backend
        image: registry.ng.bluemix.net/chirper/nginx-ingress-controller:0.9.0-beta.10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 18080
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
        name: nginx-ingress-controller
        ports:
        - containerPort: 80
        - containerPort: 443
        readinessProbe:
          httpGet:
            path: /healthz
            port: 18080
            scheme: HTTP
      terminationGracePeriodSeconds: 60
