deploy/bluemix-container-service/nginx/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  selector:
    k8s-app: nginx-ingress-lb
  ports:
   - protocol: TCP
     port: 80
